--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,15 @@
     "name": "weather-website",
     "builds": [
       {
-        "src": "index.html",
+        "src": "*.html",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "*.css",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "*.js",
         "use": "@vercel/static"
       }
     ],
