--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "version": 2,
-  "name": "website",
   "builds": [
     {
       "src": "index.html",
@@ -19,30 +18,30 @@
       "use": "@vercel/static"
     },
     {
-      "src": "statics/**",
+      "src": "statics/**/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/statics/(.*)",
-      "dest": "/statics/$1"
+      "src": "/",
+      "dest": "index.html"
     },
     {
       "src": "/about",
-      "dest": "/about.html"
+      "dest": "about.html"
     },
     {
       "src": "/features",
-      "dest": "/features.html"
+      "dest": "features.html"
     },
     {
       "src": "/technologies",
-      "dest": "/technologies.html"
+      "dest": "technologies.html"
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "src": "/statics/(.*)",
+      "dest": "/statics/$1"
     }
   ]
 }
